# cantera-website

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  README.md  conf.py  copy-api-docs.py  index.html  pdm.toml  pyproject.toml  requirements.txt
.ci_support/: ctdeploy_key.enc  rename_docs_files.py
.github/workflows/: main.yaml
api-docs/: add_warning.py  bump_katex.py
api-docs/docs-2.4/: Cantera.tag  index.html
api-docs/docs-2.5/: Cantera.tag
mod_rewrite/: .htaccess
mod_rewrite/2.4/: .htaccess
mod_rewrite/3.0/: .htaccess
mod_rewrite/3.1/: .htaccess
mod_rewrite/dev/: .htaccess
pages/: 403.html  404.html  500.html  503.html  about.rst  affiliated.rst  community.rst  dave-goodwin.rst  governance.rst  index.html  index.rst
pages/compiling/: compilation-reqs.rst  config-options-dev.rst  (+8 more)
plugins/: bootstrap.py  bootstrap_rst.plugin  build_examples.plugin  build_examples.py  class.plugin  copy_tree.plugin  copy_tree.py  new_release.plugin  new_release.py  override_html_formatter.plugin  override_html_formatter.py  parse_docs.plugin  parse_docs.py  process_labels.plugin  process_labels.py  process_ref_targets.plugin  process_ref_targets.py  ref.plugin  ref.py  render_cxx_examples.plugin  render_cxx_examples.py  render_fortran_examples.plugin  render_fortran_examples.py  render_jupyter_examples.plugin  render_jupyter_examples.py  render_matlab_examples.plugin  render_matlab_examples.py  render_python_examples.plugin  render_python_examples.py  rest_class.py
posts/: ChemCheck_Update.md  ChemCheck_Updates.md  GSoC 2019.md  GSoC_2019_Fourth_Blog.md  GSoC_2019_Project_First_Evaluation.md  GSoC_2019_Project_Introduction.md  GSoC_2019_Third_Blog.md  gsoc-2020-blog-1.md  gsoc-2020-blog-2.md  gsoc-2020-blog-3.md  gsoc-2020-blog-4.md  gsoc-2020-intro.md  kincodecon2018.md  new-website-is-live.md  nsf-awards-cantera-project-25m-through-2022.md
shortcodes/: ct_dev_docs.tmpl  ct_docs.tmpl  yaml_dev.tmpl
source/: affiliated.md  citations.md  community.md  community.rst  conf.py  contents.rst  dave-goodwin.md  dave-goodwin.rst  getting-involved.md  governance.md  governance.rst  index.md  news-index.md
(+11890 files in other folders)
