[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Cantera Developers", email = "developers@cantera.org"},
]
dependencies = [
    "sphinx>=5.0.2",
    "pydata-sphinx-theme>=0.9.0",
    "myst-parser>=0.18.0",
    "sphinx-design>=0.2.0",
]
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "pre-commit>=2.19.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
