[project]
name = "cantera-website"
description = ""
authors = [
    {name = "Cantera Developers", email = "developers@cantera.org"},
]
dependencies = [
    "sphinx>=5.0.2",
    "pydata-sphinx-theme>=0.13.0",
    "myst-parser>=1.0.0",
    "sphinx-design>=0.3.0",
    "sphinx-autobuild",
]
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "pre-commit>=2.19.0",
]

[tool.pdm.scripts]
build = {cmd = [
  "sphinx-build",
  "-b",
  "html",
  "-W",
  "--keep-going",
  "source",
  "build/html",
  "-a",
]}
rebuild = {cmd = [
  "sphinx-autobuild",
  "source",
  "build/html",
  "--watch",
  "source",
  "--port",
  "0",
  "--open-browser",
]}
